force-app/main/default/objects/CMCTIDeleteEvent__e/CMCTIDeleteEvent__e.object-meta.xml
<CustomObject>
    <description>Es el evento que gestiona el borrado de un Campaign Member CTI, básicamente lanza la operativa en el Platform Event Triggered Flow para este PE, que lanza el subflujo de borrado del CMCTI y su historificación</description>
    <label>CM CTI Delete Event</label>
    <pluralLabel>CM CTI Delete Events</pluralLabel>
</CustomObject>