force-app/main/default/objects/CMCTIDeleteEvent__e/fields/BorrarCMCTI__c.field-meta.xml
<CustomField>
    <fullName>BorrarCMCTI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el proceso debe o no borrar el CMCTI que se está pasando</description>
    <label>BorrarCMCTI</label>
    <type>Checkbox</type>
</CustomField>