force-app/main/default/objects/CMCTIDeleteEvent__e/fields/IdCMCTI__c.field-meta.xml
<CustomField>
    <fullName>IdCMCTI__c</fullName>
    <description>Identificador del registro de CM CTI que se va a Borrar e historificar</description>
    <label>IdCMCTI</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>