force-app/main/default/objects/CMCTIDeleteEvent__e/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Valor del Resultado que se aplica a la historificación del CM CTI</description>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>