force-app/main/default/objects/CMCTIDeleteEvent__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Valor de Estado del registro de CM CTI que se está borrando. Se aplica a la historificación</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>